flux/apps/sparkyfitness/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: sparkyfitness
    namespace: extra-tools
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:Ev28OwPB8efrg+q+ry5qdD+mzA8mDV9sizvLYLx2uWrFUWY=,iv:mi6IqiIkwGUlkQ64YBHo1Z4SLqyg03GxW2AZ+hJK4IM=,tag:HJRMe03AzkFA3epEN1oUYw==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: sparkyfitness-frontend
              port: 80
sops:
    age:
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1aDMwTjh6dXMrWnBwbWVr
[...]
            SXOTxqLwwo1okgigb9QOTs9mdJ12Zn+MkOEecgJHLUVEi1SK4tqWhQ==
            -----END AGE ENCRYPTED FILE-----
          recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
    encrypted_regex: ^(hostnames)$
    lastmodified: "2026-09-15T09:28:51Z"
    mac: ENC[AES256_GCM,data:Cm6p+A7HwZ3CIVdrWwaKSScRNwiirOa8Qr9jwemQg7cjUtXgPJKF3S9XSVfj3IjZwq8EHYr9LLIAiJg7hDBPO66BsfJOWGzKin8N3HDoLwvNFx/m5T4UQMYAYVuomUEO4RmoW/iwp+WmsfX8uUt2yGoWujxR5CYI4wTqvdY4iYc=,iv:lENp9RYIzqRMANkhCivtMGpKrueo/tCSNxqGdizDhlY=,tag:6Y8dnDxJe3Wp0klQa5cVTg==,type:str]
    version: 3.13.3
